--- a/exercise-week10/angular-svtickets/src/app/auth/login/login.component.html
+++ b/exercise-week10/angular-svtickets/src/app/auth/login/login.component.html
@@ -25,5 +25,5 @@
   </div>
   <p class="text-danger" id="errorInfo"></p>
   <a class="btn btn-secondary" href="#" role="button">Create account</a>
-  <a class="btn btn-primary" href="#" role="button">Login</a>
+  <a href="/events"><button type="button" class="btn btn-primary" id="login">Login</button></a>
 </form>
