--- a/Proyecto Unit2/angular-svtickets/src/app/auth/register/register.component.html
+++ b/Proyecto Unit2/angular-svtickets/src/app/auth/register/register.component.html
@@ -31,8 +31,8 @@
 
 	<div class="mb-3">
 		<label for="emailConfirm">Repeat Email:</label>
-		<input type="email" class="form-control" id="emailConfirm" name="emailConfirm" placeholder="Email" formControlName="emailConfirm"
-			[validationClasses]="{valid: 'is-valid', invalid: 'is-invalid'}">
+		<input type="email" class="form-control" id="emailConfirm" name="emailConfirm" placeholder="Email"
+			formControlName="emailConfirm" [validationClasses]="{valid: 'is-valid', invalid: 'is-invalid'}">
 
 		@let emailComfirmError = registerForm.get('emailConfirm')?.errors;
 
@@ -60,16 +60,18 @@
 		<div class="invalid-feedback">password must be more than 4 characters.</div>
 		}
 	</div>
-    <div class="form-row">
-        <div class="mb-3 col">
-            <label for="lat">Latitude:</label>
-            <input type="text" class="form-control" id="lat" name="lat" placeholder="Geolocating..." readonly formControlName="lat"/>
-        </div>
-        <div class="mb-3 col">
-            <label for="lng">Longitude:</label>
-            <input type="text" class="form-control" id="lng" name="lng" placeholder="Geolocating..." readonly formControlName="lng"/>
-        </div>
-    </div>
+	<div class="form-row">
+		<div class="mb-3 col">
+			<label for="lat">Latitude:</label>
+			<input type="text" class="form-control" id="lat" name="lat" placeholder="Geolocating..." readonly
+				formControlName="lat" />
+		</div>
+		<div class="mb-3 col">
+			<label for="lng">Longitude:</label>
+			<input type="text" class="form-control" id="lng" name="lng" placeholder="Geolocating..." readonly
+				formControlName="lng" />
+		</div>
+	</div>
 	<div class="mb-3">
 		<label for="avatar">Avatar image</label>
 		<input type="file" class="form-control" id="avatar" name="avatar" encodeBase64 (encoded)="base64image = $event"
@@ -82,9 +84,15 @@
 		<div class="invalid-feedback">Avatar required</div>
 		}
 	</div>
-	<img src="" alt="" id="imgPreview" class="img-thumbnail d-none" />
+	@if (base64image) {
+	<img [src]="base64image" alt="" id="imgPreview" class="img-thumbnail mb-3">
+	}
 
 	<p class="text-danger" id="errorInfo"></p>
+
+	@if(errorMessage() === 400) {
+	<div class="alert alert-danger">Email already exist.</div>
+	}
 	<a class="btn btn-secondary" [routerLink]="['/auth/loginForm']" role="button">Go back</a>
 	<button type="submit" class="btn btn-primary" [disabled]="registerForm.invalid">Register</button>
 </form>
