token bug repared

--- a/Proyecto Unit2/angular-svtickets/src/app/auth/login/login.component.html
+++ b/Proyecto Unit2/angular-svtickets/src/app/auth/login/login.component.html
@@ -34,6 +34,6 @@
 	
 	<div>
 		<a class="btn btn-secondary" [routerLink]="['/auth/register']" role="button">Create account</a>
-		<button type="submit" class="btn btn-primary">Login</button>
+		<button type="submit" class="btn btn-primary" [disabled]="loginForm.invalid">Login</button>
 	</div>
 </form>
