--- a/Proyecto Unit2/angular-svtickets/src/app/events/event-card/event-card.component.html
+++ b/Proyecto Unit2/angular-svtickets/src/app/events/event-card/event-card.component.html
@@ -1,23 +1,33 @@
 <div class="card shadow">
-  <a [routerLink]="['/events', event().id]">
-    <img class="card-img-top" [src]="event().image" alt="" />
-  </a>
+    <a [routerLink]="['/events', event().id]">
+        <img class="card-img-top" [src]="event().image" alt="" />
+    </a>
 
-  <div class="card-body">
-    <h4 class="card-title">
-      <a [routerLink]="['/events', event().id]">
-        {{ event().title }}
-      </a>
-    </h4>
-    <p class="card-text">{{ event().description }}</p>
-    <button class="btn btn-danger delete" (click)="deleteEvent()">
-      <i class="bi bi-trash"></i>
-    </button>
-  </div>
-  <div class="card-footer text-muted row m-0">
-    <div class="col">{{ event().date | date : "dd/MM/yyyy" }}</div>
-    <div class="col text-end">
-      {{ event().price | intlCurrency : "EUR" : "es-ES" }}
+    <div class="card-body">
+        <h4 class="card-title">
+            <a [routerLink]="['/events', event().id]">
+                {{ event().title }}
+            </a>
+        </h4>
+        <p class="card-text">{{ event().description }}</p>
+        <div class="row">
+            <div class="col">
+                @if (event().mine) {
+                <button (click)="deleteEvent()" class="btn btn-danger delete"><i class="bi bi-trash"></i></button>
+                <a [routerLink]="['/events', event().id, 'edit']">
+                    <button class="btn btn-success edit"> <i class="bi bi-pencil-fill"></i> </button>
+                </a>
+                }
+            </div>
+            
+            <!-- <button class="btn btn-danger delete" (click)="deleteEvent()">
+            <i class="bi bi-trash"></i>
+        </button> -->
+        </div>
+        <div class="card-footer text-muted row m-0">
+            <div class="col">{{ event().date | date : "dd/MM/yyyy" }}</div>
+            <div class="col text-end">
+                {{ event().price | intlCurrency : "EUR" : "es-ES" }}
+            </div>
+        </div>
     </div>
-  </div>
-</div>
