--- a/Proyecto Unit2/angular-svtickets/src/app/events/event-form/event-form.component.html
+++ b/Proyecto Unit2/angular-svtickets/src/app/events/event-form/event-form.component.html
@@ -1,4 +1,4 @@
-<form class="mt-4" #eventForm="ngForm" (ngSubmit)="addEvent()">
+<!-- <form class="mt-4" #eventForm="ngForm" (ngSubmit)="addEvent()">
   <div class="mb-3">
     <label for="title" class="form-label">Title</label>
     <input
@@ -103,4 +103,4 @@
   <div>
     <button type="submit" class="btn btn-primary" [disabled]="eventForm.invalid">Create</button>
   </div>
-</form>
+</form> -->
