--- a/Proyecto Unit2/angular-svtickets/src/app/events/events-page/events-page.component.html
+++ b/Proyecto Unit2/angular-svtickets/src/app/events/events-page/events-page.component.html
@@ -1,28 +1,41 @@
 <nav class="navbar navbar-light bg-light justify-content-between mt-3">
-  <div class="container-fluid">
-    <ul class="nav">
-      <li class="nav-item">
-        <button class="nav-link" (click)="orderDate()">Order by date</button>
-      </li>
-      <li class="nav-item">
-        <button class="nav-link" (click)="orderPrice()">Order by price</button>
-      </li>
-    </ul>
-    <form class="d-flex mb-0">
-      <input
-        class="form-control me-2"
-        type="text"
-        name="search"
-        placeholder="Search"
-        aria-label="Search"
-        [(ngModel)]="search"
-      />
-    </form>
-  </div>
+    <div class="container-fluid">
+        <ul class="nav">
+            <li class="nav-item">
+                <button class="nav-link" href="#" (click)="sortByDate()">Order by date</button>
+            </li>
+            <li class="nav-item">
+                <button class="nav-link" href="#" (click)="sortByPrice()">Order by price</button>
+            </li>
+            <li class="nav-item">
+                <button class="nav-link" href="#" (click)="sortByDistance()">Order by distance</button>
+            </li>
+        </ul>
+        <form class="d-flex mb-0">
+            <input class="form-control me-2" type="text" name="search" id="search" placeholder="Search"
+                aria-label="Search" [formControl]="searchControl">
+        </form>
+    </div>
 </nav>
 
-<div class="mb-4 mt-4 row row-cols-1 row-cols-md-2 row-cols-xl-3 g-4">
-  @for(event of filteredEvents(); track event.id) {
-  <event-card class="col" [event]="event" (deleted)="deleteEvent(event)" />
-  }
+<div id="eventsContainer" class="mb-4 mt-4 row row-cols-1 row-cols-md-2 row-cols-xl-3 g-4">
+    @if (events().length) {
+    @for (event of events(); track event.id) {
+    <event-card [event]="event" (deleted)="removeEvent(event)" class="col"></event-card>
+    }}
+    @else {
+    <div class="col">
+        <div class="alert alert-info" role="alert">
+            No events found.
+        </div>
+    </div>
+    }
 </div>
+
+@if (hasMoreEvents()) {
+<div class="mb-4">
+    <button id="loadMore" class="btn btn-primary" (click)="loadMoreEvents()">
+        Load More events
+    </button>
+</div>
+}
