--- a/Proyecto Unit2/angular-svtickets/src/app/shared/top-menu/top-menu.component.html
+++ b/Proyecto Unit2/angular-svtickets/src/app/shared/top-menu/top-menu.component.html
@@ -11,7 +11,7 @@
 				<a class="nav-link" [routerLink]="['/events/add']" [routerLinkActive]="['active']">New event</a>
 			</li>
 			<li class="nav-item">
-				<a class="nav-link" [routerLink]="['/profile/me']" [routerLinkActive]="['active']">My profile</a>
+				<a class="nav-link" [routerLink]="['/profile/']" [routerLinkActive]="['active']">My profile</a>
 			</li>
 			}
 		</ul>
