--- a/Proyecto Unit2/angular-svtickets/src/app/events/event-detail/event-detail.component.css
+++ b/Proyecto Unit2/angular-svtickets/src/app/events/event-detail/event-detail.component.css
@@ -8,3 +8,13 @@ ol-map {
   width: 100%;
   height: 300px;
 }
+
+user-info {
+  width: 8rem;
+  .avatar {
+    width: 4rem;
+  }
+}
+.comment {
+  white-space: pre-wrap;
+}
