--- a/Proyecto Unit2/angular-svtickets/src/app/profile/profile-page/profile-page.component.html
+++ b/Proyecto Unit2/angular-svtickets/src/app/profile/profile-page/profile-page.component.html
@@ -31,17 +31,16 @@
         }
 
         <div class="mt-3">
-            <a class="btn btn-outline-success" [routerLink]="['/events']" [queryParams]="{ creator: user().id }">
+            <a class="btn border-black" [routerLink]="['/events']" [queryParams]="{ creator: user().id }">
                 Events created by {{ user().name }}
-                <i class="bi bi-envelope-arrow-up"></i>
             </a>
         </div>
         <div class="mt-3">
-            <a class="btn btn-outline-success" [routerLink]="['/events']" [queryParams]="{ attending: user().id }">
+            <a class="btn border-black" [routerLink]="['/events']" [queryParams]="{ attending: user().id }">
                 Events {{ user().name }} is attending
-                <i class="bi bi-person-check"></i>
             </a>
         </div>
+        
         @if (isProfileFormVisible) {
         <div class="col-9" [formGroup]="profileForm">
             <form (submit)="updateProfileInfo()">
